After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 652980 - Fix filesystem read/write accounting on OpenBSD
Fix filesystem read/write accounting on OpenBSD
Status: RESOLVED FIXED
Product: libgtop
Classification: Core
Component: bsd
2.28.x
Other OpenBSD
: Normal normal
: ---
Assigned To: libgtop maintainers
libgtop maintainers
Depends on:
Blocks:
 
 
Reported: 2011-06-20 08:52 UTC by Jasper Lievisse Adriaanse
Modified: 2011-06-22 15:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Add _glibtop_openbsd_get_fsusage_read_write() (2.12 KB, patch)
2011-06-20 08:52 UTC, Jasper Lievisse Adriaanse
none Details | Review

Description Jasper Lievisse Adriaanse 2011-06-20 08:52:23 UTC
Created attachment 190250 [details] [review]
Add _glibtop_openbsd_get_fsusage_read_write()

As per subject; with this diff the gnome-applets multiload applet's Disk graph works fine for example.
Comment 1 Jasper Lievisse Adriaanse 2011-06-22 12:58:24 UTC
Anyone please? While I can understand few people get excited about OpenBSD
fixes, I wouldn't mind review, or be allowed to commit OpenBSD-only part of
libgtop?
Comment 2 Colin Walters 2011-06-22 13:40:22 UTC
Can you ask the other OpenBSD guy to look at your patches?
Comment 3 Antoine Jacoutot 2011-06-22 13:51:28 UTC
I can confirm these patches are sane. We've been shipping our libgtop2 package with them and disk i/o stats are working fine.
From my point of view, they should be committed and they don't touch any part of code that is !OpenBSD.
Comment 4 Colin Walters 2011-06-22 15:00:10 UTC
Great!  For reference I'm just happy if some code review is happening.  In the case of subsystem-specific bits like this, signoff from another domain expert is perfect.
Comment 5 Jasper Lievisse Adriaanse 2011-06-22 15:27:19 UTC
Thanks both, I've committed the patches.