Fix filesystem read/write accounting on OpenBSD

https://bugzilla.gnome.org/show_bug.cgi?id=652980