sysdeps/common/fsusage.c
@@ -149,6 +149,15 @@ _glibtop_freebsd_get_fsusage_read_write(glibtop *server,
 #define _glibtop_get_fsusage_read_write(S, B, P) \
 	_glibtop_freebsd_get_fsusage_read_write(S, B, P)
 
+#elif defined(__OpenBSD__)
+void
+_glibtop_openbsd_get_fsusage_read_write(glibtop *server,
+					glibtop_fsusage *buf,
+					const char *path);
+
+#define _glibtop_get_fsusage_read_write(S, B, P) \
+	_glibtop_openbsd_get_fsusage_read_write(S, B, P)
+
 #else /* default fallback */
 #warning glibtop_get_fsusage .read .write are not implemented.
 static inline void
@@ -270,7 +279,7 @@ glibtop_get_fsusage_s (glibtop *server, glibtop_fsusage *buf,
     return;
 
 #if (defined(sun) || defined(__sun)) && (defined(__SVR4) || defined(__svr4__)) \
-	|| defined(__FreeBSD__)
+	|| defined(__FreeBSD__) || defined(__OpenBSD__)
   /* Solaris but not SunOS and FreeBSD */
   buf->block_size = fsd.f_frsize;
 #else
